--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,13 +5,21 @@
         <!-- Customize your theme here. -->
     </style>
 
+
+
     <style name="button" parent="">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:minWidth">200dp</item>
         <item name="android:layout_marginTop">20dp</item>
         <item name="android:textSize">15dp</item>
-        <item name="android:background">#eb166ac9</item>
         <item name="android:textColor">#ffffff</item>
+        <item name="android:background">@drawable/button</item>
+
+
     </style>
 
 </resources>
+
+
