--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -3,7 +3,9 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Homepage">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Homepage"
+    android:background="@drawable/bg_bronze" >
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -11,48 +13,50 @@
         android:layout_centerHorizontal="true"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/headline"
-        android:id="@+id/textView" />
+        android:id="@+id/textView"
+        android:textSize="30dp"
+        android:textColor="#ffffff"
+        android:layout_marginBottom="0dp"/>
 
     <Button
         android:text="@string/spotify_streamer"
         android:id="@+id/btn_spotify"
         android:onClick="display_toast"
         style="@style/button"
-        android:layout_below="@+id/textView"
-        android:layout_marginTop="40dp" />
+        android:layout_below="@+id/textView" />
 
     <Button
         android:text="@string/score_app"
         android:id="@+id/btn_score"
-        android:layout_below="@+id/btn_spotify"
         android:onClick="display_toast"
-        style="@style/button" />
+        style="@style/button"
+        android:layout_below="@+id/btn_spotify"/>
 
     <Button
         android:text="@string/library_app"
         android:id="@+id/btn_library"
-        android:layout_below="@+id/btn_score"
         android:onClick="display_toast"
-        style="@style/button" />
+        style="@style/button"
+        android:layout_below="@+id/btn_score" />
 
     <Button
         android:text="@string/build_it_bigger"
         android:id="@+id/btn_bigger"
-        android:layout_below="@+id/btn_library"
         android:onClick="display_toast"
-        style="@style/button" />
+        style="@style/button"
+        android:layout_below="@+id/btn_library"/>
     <Button
         android:text="@string/bacon_reader"
         android:id="@+id/btn_bacon"
-        android:layout_below="@+id/btn_bigger"
         android:onClick="display_toast"
-        style="@style/button" />
+        style="@style/button"
+        android:layout_below="@+id/btn_bigger" />
 
     <Button
         android:text="@string/capstone"
         android:id="@+id/btn_capstone"
-        android:layout_below="@+id/btn_bacon"
         android:onClick="display_toast"
-        style="@style/button" />
+        style="@style/button"
+        android:layout_below="@+id/btn_bacon" />
 
 </RelativeLayout>
