--- a/app/src/main/res/drawable/button_enabled.xml
+++ b/app/src/main/res/drawable/button_enabled.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <!-- <gradient -->
+
     <solid
-        android:color="#1565C0"/>
+        android:color="#1565C0" />
     <padding android:left="7dp"
         android:top="10dp"
         android:right="10dp"
@@ -11,4 +11,30 @@
         android:width="1dip"
         android:color="#000000" />
     <corners android:radius= "10dp" />
+
+    <!--
+    <solid
+        android:color="#7eff8003" />
+    <padding android:left="7dp"
+        android:top="10dp"
+        android:right="10dp"
+        android:bottom="10dp" />
+    <stroke
+        android:width="1dip"
+        android:color="#000000" />
+    <corners android:radius= "40dp" />
+
+
+    <solid
+        android:color="#1565C0" />
+    <padding android:left="7dp"
+        android:top="10dp"
+        android:right="10dp"
+        android:bottom="10dp" />
+    <stroke
+        android:width="1dip"
+        android:color="#000000" />
+    <corners android:radius= "10dp" />
+
+    -->
 </shape>
