--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,9 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="android:Theme.Holo">
         <!-- Customize your theme here. -->
     </style>
-
 
 
     <style name="button" parent="">
@@ -13,12 +12,24 @@
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:minWidth">200dp</item>
         <item name="android:layout_marginTop">20dp</item>
-        <item name="android:textSize">15dp</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">#ffffff</item>
+        <!--<item name="android:background">#eb166ac9</item>-->
+        <item name="android:background">@drawable/button</item>
+    </style>
+
+    <style name="button_test" parent="">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:width">150dp</item>
+        <item name="android:height">120dp</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:layout_margin">5dp</item>
         <item name="android:textColor">#ffffff</item>
         <item name="android:background">@drawable/button</item>
-
-
     </style>
+
 
 </resources>
 
