--- a/app/src/main/res/drawable/button_focused.xml
+++ b/app/src/main/res/drawable/button_focused.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <gradient
-        android:startColor="#2196F3"
-        android:centerColor="#1565C0"
-        android:endColor="#0D47A1"
+        android:startColor="@color/main_lighter"
+        android:centerColor="@color/main"
+        android:endColor="@color/main_darker"
         android:angle="-90"/>
     <padding android:left="7dp"
         android:top="7dp"
