--- a/app/src/main/res/drawable/button_pressed.xml
+++ b/app/src/main/res/drawable/button_pressed.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-
-    <gradient android:startColor="#2196F3"
-        android:centerColor="#1565C0"
-        android:endColor="#0D47A1"
+    <gradient
+        android:startColor="@color/main"
+        android:centerColor="@color/main_darker"
+        android:endColor="@color/main_darkest"
         android:angle="-90"/>
     <padding android:left="7dp"
         android:top="7dp"
@@ -11,7 +11,7 @@
         android:bottom="7dp" />
     <stroke
         android:width="1dip"
-        android:color="#000000" />
+        android:color="@color/black" />
     <corners android:radius= "10dp" />
     <!--
   <solid
