--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Homepage"
-    android:background="@drawable/bg_bronze" >
+    android:background="@drawable/bg_orange" >
 
 
     <TextView
@@ -15,7 +15,7 @@
         android:text="@string/headline"
         android:id="@+id/textView"
         android:textSize="30dp"
-        android:textColor="#ffffff"
+        android:textColor="@color/white"
         android:layout_marginBottom="0dp"/>
 
     <Button
