--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,8 +13,9 @@
         <item name="android:minWidth">200dp</item>
         <item name="android:layout_marginTop">20dp</item>
         <item name="android:textSize">20dp</item>
-        <item name="android:textColor">#ffffff</item>
-        <!--<item name="android:background">#eb166ac9</item>-->
+        <item name="android:paddingTop">2dp</item>
+        <item name="android:paddingBottom">5dp</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:background">@drawable/button</item>
     </style>
 
@@ -26,7 +27,7 @@
         <item name="android:height">120dp</item>
         <item name="android:textSize">20dp</item>
         <item name="android:layout_margin">5dp</item>
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:background">@drawable/button</item>
     </style>
 
